<resources>
    <string name="app_name">BLETest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start_advertise">Start advertise</string>
    <string name="btn_stop_advertise">Stop advertise</string>

    <string name="btn_ble_scan_start">Start scan</string>
    <string name="btn_ble_scan_stop">Stop scan</string>

    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_read">Read</string>
    <string name="lbl_message">Message:</string>
    <string name="btn_write">WRITE</string>
    <string name="hint_server_message">Write server message</string>

</resources>
