<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_server_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_server_message"
        android:layout_alignParentTop="true"
        />

    <Button
        android:id="@+id/btn_start_advertise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_server_message"
        android:layout_marginTop="20dp"
        android:text="@string/btn_start_advertise">

        <requestFocus />
    </Button>

    <Button
        android:id="@+id/btn_stop_advertise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_start_advertise"
        android:text="@string/btn_stop_advertise"
        android:enabled="false"
        />


</RelativeLayout>
